[tool.poetry]
name = "dans-datastation-tools"
version = "0.2.0"
description = "Command line utilities for Data Station application management"
authors = ["DANS-KNAW"]
packages = [
    { include = "datastation", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.26.0"
lxml = "^4.8.0"
dicttoxml = "^1.7.4"
pyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mkdocs = "==1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
retrieve-dataset-pids = "datastation.scripts.retrieve_dataset_pids:main"
