[tool.poetry]
name = "dans-datastation-tools"
version = "0.25.0"
description = "Command line utilities for Data Station application management"
authors = ["DANS-KNAW"]
packages = [
    { include = "datastation", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
lxml = "^4.8.0"
dicttoxml = "^1.7.4"
pyYAML = "^6.0"
psycopg = "^3.1.8"
rich = "^13.3.4"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
psycopg_binary = "^3.0.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dans-bag-validate = "datastation.dans_bag_validate:main"
dv-banner = "datastation.dv_banner:main"
dv-datacite-records-update = "datastation.old.scripts.update_datacite_records:main"
dv-dataset-role-assignment = "datastation.dv_dataset_role_assignment:main"
dv-dataset-delete-draft = "datastation.dv_dataset_delete_draft:main"
dv-dataset-destroy-migration-placeholder = "datastation.dv_dataset_destroy_migration_placeholder:main"
dv-dataset-destroy = "datastation.dv_dataset_destroy:main"
dv-dataset-find-by-role-assignment= "datastation.dv_dataset_find_by_role_assignment:main"
dv-dataset-locks = "datastation.old.scripts.manage_dataset_lock:main"
dv-dataset-oai-harvest = "datastation.old.scripts.oai_harvest:main"
dv-dataset-publish = "datastation.old.scripts.publish_datasets:main"
dv-dataset-reindex = "datastation.old.scripts.reindex_datasets:main"
dv-dataset-replace-metadata-field-values = "datastation.old.scripts.replace_metadata_field_values:main"
dv-dataset-retrieve-metadata-field = "datastation.old.scripts.retrieve_dataset_metadata_field:main"
dv-dataset-retrieve-metadata = "datastation.old.scripts.retrieve_dataset_metadata:main"
dv-dataset-verify = "datastation.old.scripts.verify_dataset:main"
dv-dataverse-oai-harvest = "datastation.old.scripts.oai_harvest:main"
dv-dataverse-retrieve-pids = "datastation.old.scripts.retrieve_dataset_pids:main"
dv-file-prestage = "datastation.old.scripts.prestage_files:main"
dv-user-import = "datastation.old.scripts.import_user:main"
ingest-flow-block = "datastation.old.scripts.ingest_flow_block:main"
ingest-flow-copy-batch-to-ingest-area = "datastation.old.scripts.ingest_flow_copy_batch_to_ingest_area:main"
ingest-flow-list-events = "datastation.old.scripts.ingest_flow_list_events:main"
ingest-flow-move-batch-to-ingest-area = "datastation.old.scripts.ingest_flow_move_batch_to_ingest_area:main"
ingest-flow-progress-report = "datastation.old.scripts.ingest_flow_progress_report:main"
ingest-flow-start-import = "datastation.old.scripts.ingest_flow_start_import:main"
ingest-flow-start-migration = "datastation.old.scripts.ingest_flow_start_migration:main"
ingest-flow-unblock = "datastation.old.scripts.ingest_flow_unblock:main"
