[tool.poetry]
name = "dans-datastation-tools"
version = "0.25.0"
description = "Command line utilities for Data Station application management"
authors = ["DANS-KNAW"]
packages = [
    { include = "datastation", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
lxml = "^4.8.0"
dicttoxml = "^1.7.4"
pyYAML = "^6.0"
psycopg = "^3.1.8"
rich = "^13.3.4"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
psycopg_binary = "^3.0.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ingest-flow = "datastation.ingest_flow:main"
dans-bag-validate = "datastation.dans_bag_validate:main"
dv-banner = "datastation.dv_banner:main"
dv-datacite-records-update = "datastation.old.scripts.update_datacite_records:main"
dv-dataset-role-assignment = "datastation.dv_dataset_role_assignment:main"
dv-dataset-delete-draft = "datastation.dv_dataset_delete_draft:main"
dv-dataset-destroy-migration-placeholder = "datastation.dv_dataset_destroy_migration_placeholder:main"
dv-dataset-destroy = "datastation.dv_dataset_destroy:main"
dv-dataset-find-by-role-assignment = "datastation.dv_dataset_find_by_role_assignment:main"
dv-dataset-get-metadata-export = "datastation.dv_dataset_get_metadata_export:main"
dv-dataset-lock = "datastation.dv_dataset_lock:main"
dv-dataset-oai-harvest = "datastation.old.scripts.oai_harvest:main"
dv-dataset-publish = "datastation.dv_dataset_publish:main"
dv-dataset-reindex = "datastation.dv_dataset_reindex:main"
dv-dataset-replace-metadata-field-values = "datastation.old.scripts.replace_metadata_field_values:main"
dv-dataset-retrieve-metadata-field = "datastation.old.scripts.retrieve_dataset_metadata_field:main"
dv-dataset-retrieve-metadata = "datastation.old.scripts.retrieve_dataset_metadata:main"
dv-dataset-verify = "datastation.old.scripts.verify_dataset:main"
dv-dataverse-oai-harvest = "datastation.old.scripts.oai_harvest:main"
dv-dataverse-retrieve-pids = "datastation.old.scripts.retrieve_dataset_pids:main"
dv-user-import = "datastation.old.scripts.import_user:main"
